# embeddings.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bert.cpp  bert.h  bert.py  convert.py  run_mteb.sh  test_batch_encode.sh  test_tokenizer.sh
benchmarks/: README.md  run_mteb.py
benchmarks/results/all-MiniLM-L6-v2_q4_0/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L6-v2_sbert/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/all-MiniLM-L6-v2_sbert-batchless/: EmotionClassification.json  STSBenchmark.json
benchmarks/results/bge-base-en-v1.5_f16/: STSBenchmark.json
benchmarks/results/bge-base-en-v1.5_f32/: STSBenchmark.json
benchmarks/results/bge-base-en-v1.5_q4_0/: STSBenchmark.json
benchmarks/results/bge-base-en-v1.5_q4_0-batchless/: STSBenchmark.json
benchmarks/results/bge-base-en-v1.5_q4_1/: STSBenchmark.json
benchmarks/results/bge-base-en-v1.5_sbert/: STSBenchmark.json
benchmarks/results/bge-base-en-v1.5_sbert-batchless/: STSBenchmark.json
bert_cpp/: __init__.py  api.py  convert.py  model.py  utils.py
examples/: CMakeLists.txt  basic.cpp  bert.py  main.cpp  sample_client.py  sample_dylib.py  server.cpp  simple.cpp  test_batch_encode.cpp  test_hf_tokenizer.py  test_prompts.txt  test_tokenizer.cpp
models/: convert-to-ggml.py  convert.py  download-repo.py  download.py  quantize.cpp  run_conversions.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.sh  test_hf_tokenizer.py  test_prompts.txt  test_tokenizer.cpp
